# pinn-project

./: .gitignore  CMakeLists.txt  README.md  containerization.md  flake.nix
src_cpp/: CMakeLists.txt  main.cpp
src_cpp/controllers/: ComputedTorqueControl.cpp  ComputedTorqueControl.h  ComputedTorqueControl.tpp
src_cpp/include/: ControllerInterface.h  DataLogging.h  EndPointGenerator.h
src_cpp/ipc/: SharedMemoryLink.cpp  SharedMemoryLink.h
src_cpp/models/: RobotModel.cpp  RobotModel.h
src_cpp/plant/: ManipulatorPlant.cpp  ManipulatorPlant.h  config.h
src_python/: main.py  pyproject.toml  test_stack.py
src_python/inference/: shared_memory_node.py
src_python/models/: kinematics.py  physics_loss.py  pinn_network.py
