[project]
name = "pinn-manipulator"
version = "0.1.0"
description = "3 DOF PINN Architecture"
authors = [{ name = "elichall", email = "1elijah.hall@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.10.0",
    "flax",
    "equinox",
    "optax",
    "numpy",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.10.0"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
